# Rasterizer

./: .gitignore  README.md
src/: CMakeLists.txt  ImageModel.cpp  ImageModel.h  Main.cpp
src/data/: ressource.qrc
src/data/qml/: Main.qml  qml.qrc
src/data/qml/components/: InputCoord.qml  Point.qml  SpritePoint.qml  qmldir
